@@ -1,0 +1,26 @@
+<%args>
+	$entry 
+	$round => undef
+</%args>
+<%init>
+
+	if ($round) { 
+
+		Tab::Ballot->set_sql( by_round => "
+			select distinct ballot.* 
+			from ballot, panel
+			where ballot.entry = ? 
+			and ballot.panel = panel.id
+			and panel.round = ?
+		");
+
+		return Tab::Ballot->search_by_round($entry->id, $round->id);
+	
+	} else { 
+
+		return $entry->ballots;
+
+	}
+
+
+</%init>
