@@ -12,7 +12,7 @@
 
 	<& /funclib/tablesorter.mas, table => "panels" &>
 
-	<& menu.mas, tourn => $tourn, event => $event->id &>
+	<& menu.mas, tourn => $tourn, event => $event &>
 
 	<div class="left huge">
 
@@ -294,8 +294,8 @@
 
 			</tbody>
 
-			<tr class="bluerow">
-				<td colspan="8" align="right">
+			<tr class="liblrow">
+				<td colspan="8" class="rightalign">
 					<input type="submit" value="Panel All Rounds">
 					</form>
 				</td> 
@@ -305,16 +305,20 @@
 
 %		} 
 
-
 %		if ($event->type eq "congress") { 
-
 			<p class="explain">
 				* By default if any congress rounds exist, the system will
 				clone the same chambers into all prelim rounds.  Checking this
 				box will delete any existing rounds and instead create new
 				chamber assignments for the tournament
 			</p>
-
 %		}
+
+		<div class="liblrow rightalign smallish">
+			<form action="manual.mhtml" method="post">
+			<input type="hidden" name="event_id" value="<% $event->id %>">
+			<input type="submit" value="Panel Rounds Manually">
+			</form>
+		</div> 
 
 	</div>
